--- a/src/app/components/estudios/modal-certificados/modal-certificados.component.html
+++ b/src/app/components/estudios/modal-certificados/modal-certificados.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngIf="show">
 <div class="modalc" #modalBack>
     <div class="modalb">
-        <img id="imagenTitulo" src="assets/imagenes/tituloIEN.png" alt="">
+        <img id="imagenTitulo" src={{rutaImagen}} alt="">
     </div>
     <div class="modalh">
         <button class="btn-close btn-close-white" (click)="hideModal()"></button>
