--- a/src/app/components/proyectos/portfolio/portfolio.component.css
+++ b/src/app/components/proyectos/portfolio/portfolio.component.css
@@ -1,15 +1,17 @@
-.seccion-proyectos{
-    padding: 100px 10% 50px 10%;
-    margin: 0px auto;
-    height: 100%;
+.seccion{
+    padding-top: 10%;
+    padding-bottom: 5%;
 }
-.listaPanel{
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+.boton{
+    background-color: transparent;
+    position: fixed;
+    left: 5%;
+    border-radius: 40%;
+    border-color:white;
 }
-.listaPanel li{
-    margin-bottom: 135px;
+.back{
+    color: white;
+    font-size: 30px;
 }
 .panel{
     display: block;
@@ -23,7 +25,7 @@
     margin-right: auto;
     background-position: 50%;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;   
 }
 .panel img{
     width: 100%;
@@ -43,9 +45,16 @@
 }
 .cajaTexto h2{
     padding: 20px 20px 0px;
+    color: #0379d6;
 }
 .cajaTexto p, .cajaTexto h6{
     padding: 0 40px;
     font-size: 20px;
     color: white;
+}
+.contenido{
+    padding: 40px;
+}
+.contenido h3, .contenido h5{
+    color: #0379d6;
 }
