--- a/src/app/components/proyectos/simon/simon.component.css
+++ b/src/app/components/proyectos/simon/simon.component.css
@@ -1,15 +1,17 @@
-.seccion-proyectos{
-    padding: 100px 10% 50px 10%;
-    margin: 0px auto;
-    height: 100%;
+.seccion{
+    padding-top: 10%;
+    padding-bottom: 5%;
 }
-.listaPanel{
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+.boton{
+    background-color: transparent;
+    position: fixed;
+    left: 5%;
+    border-radius: 40%;
+    border-color:white;
 }
-.listaPanel li{
-    margin-bottom: 135px;
+.back{
+    color: white;
+    font-size: 30px;
 }
 .panel{
     display: block;
