--- a/src/app/components/redes/redes.component.css
+++ b/src/app/components/redes/redes.component.css
@@ -11,7 +11,7 @@
     width: 1px;
     height: 210px;   
     margin: 0px 50%;
-    background-color:#b0b2c3;
+    background-color:#b7b7b7;
 }
 .link {
     text-decoration: none;
