--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -13,7 +13,7 @@
             </div>    
             <div>
                 <div>
-                    <a class="btn btn-primary" href="#" role="button" data-bs-toggle="modal" data-bs-target="#contacto" data-bs-whatever="@mdo">Escribeme</a>
+                    <a class="btn btn-primary" routerLink="contacto">Escribeme</a>
                 </div>
             </div>
         </div>   
