--- a/src/app/components/login/principal-login/principal-login.component.css
+++ b/src/app/components/login/principal-login/principal-login.component.css
@@ -1,5 +1,5 @@
 .modalCaja{
-    padding: 8% 25% 0 35%;
+    padding: 13% 25% 0 35%;
 }
 h2 {
     margin: 0 0 20px;
@@ -27,19 +27,10 @@ h2 {
     justify-content: space-between;
     align-items: center;
 }
-.footerRegistro {
+.footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-.footerRegistro>button {
-    height: 50%;
-    margin-top: 21px;
-}
-.iniciarSesion {
-    font-size: 14px;
-    text-decoration: none;
-    color: white;
-    width: 50%;
-    text-align: center;
+    align-items: center;
+    margin-top: 50px;
 }
