--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,5 +1,12 @@
 <div id="sobreMi" class="seccion-sobreMi">
-    <h2 class="titulos-secciones especial">Sobre Mí</h2>
+    <div class="barra">
+        <h2 class="titulos-secciones especial">Sobre Mí</h2>
+        <div>
+            <button type="button" class="botonEdit">
+                <i class="fas fa-pen"></i>
+            </button>
+        </div>
+    </div>
     <div class="contenedor-sobreMi">
         <div class="parrafoAbout">
             <p>
