--- a/src/app/components/estudios/estudios.component.html
+++ b/src/app/components/estudios/estudios.component.html
@@ -1,5 +1,12 @@
 <div id="estudios" class="seccion-estudios">
-    <h2 class="titulos-secciones">Mis Estudios</h2>
+    <div class="barra">
+        <h2 class="titulos-secciones">Mis Estudios</h2>
+        <div>
+            <button type="button" class="botonEdit">
+                <i class="fas fa-pen"></i>
+            </button>
+        </div>
+    </div>
     <div class="caja-estudios">
         <!-- Listado -->
         <div class="listado-estudios" role="table">
