--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -13,7 +13,7 @@
             </div>    
             <div>
                 <div>
-                    <a class="btn btn-primary" routerLink="contacto">Escribeme</a>
+                    <a class="btn btn-primary" routerLink="/contacto">Escribeme</a>
                 </div>
             </div>
         </div>   
