--- a/src/app/components/proyectos/items/items.component.html
+++ b/src/app/components/proyectos/items/items.component.html
@@ -1,6 +1,13 @@
 
 <div id="proyectos" class="seccion-proyectos">
-    <h2 class="titulos-secciones">Proyectos</h2>
+    <div class="barra">
+        <h2 class="titulos-secciones">Proyectos</h2>
+        <div>
+            <button type="button" class="botonEdit">
+                <i class="fas fa-pen"></i>
+            </button>
+        </div>
+    </div>
     <div class="caja-proyectos">
         <ul class="listaPanel">
             <li>
@@ -55,7 +62,7 @@
                 <div class="panel">
                     <img src="assets/imagenes/aboutGH.png" alt="">
                     <div class="cajaTexto">
-                        <h2 style="color: #0379d6">Tarjeta de Presentación</h2>
+                        <h2>Tarjeta de Presentación</h2>
                         <p>
                             Esta es una tarjeta de presentación web que diseñé en un curso de Diseñador Web.
                             El stack de trabajo que utilicé fue: HTML, CSS, Bootstrap, JavaScript.
