--- a/src/app/components/proyectos/portfolio/portfolio.component.html
+++ b/src/app/components/proyectos/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <div class="seccion">
     <button routerLink="/proyectos/items" class="boton">
-        <i class="fas fa-reply back"></i>
+        <i class="fas fa-times back"></i>
     </button>
     <div class="panel">
         <img src="assets/imagenes/portfolio.png" alt="">
