--- a/src/app/components/contacto/contacto.component.css
+++ b/src/app/components/contacto/contacto.component.css
@@ -37,7 +37,9 @@
     width: 40px;
     height: 40px;
 }
-
+.error{
+    color: red;
+}
 @media only screen and (max-width: 576px){
     .modal-caja{
         display: block;
