--- a/src/app/components/estudios/skills/skills.component.html
+++ b/src/app/components/estudios/skills/skills.component.html
@@ -1,168 +1,45 @@
 
-<section class="seccion-skills container">
+<section class="seccion-skills">
     <h1 class="titulo-skills">Mis Skills</h1>
-    <div id="carouselExampleControls" class="carousel slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
-        </div>
-        <div class="carousel-inner">
-            <!-- Skill HTML -->
-            <div class="carousel-item active">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/html.png" class="d-block" alt="...">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>80<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">HTML</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Skill CSS -->
-            <div class="carousel-item">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/css.png" class="d-block" alt="...">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>70<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">CSS</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Skill JAVASCRIPT -->
-            <div class="carousel-item">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/javascript.png" class="d-block" alt="">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>50<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">JAVASCRIPT</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Skill ANGULAR -->
-            <div class="carousel-item">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/angular.png" class="d-block" alt="">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>50<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">ANGULAR</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Skill JAVA -->
-            <div class="carousel-item">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/java.png" class="d-block" alt="">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>10<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">JAVA</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Skill MySQL -->
-            <div class="carousel-item">
-                <div class="caja-carrusel">
-                    <div class="imagenSkills">
-                        <img src="assets/iconos/mysql.png" class="d-block" alt="">
-                    </div>
-                    <div class="progreso">
-                        <div class="card">
-                            <div class="box">
-                                <div class="porcent">
-                                    <svg>
-                                        <circle cx="70" cy="70" r="70"/>
-                                        <circle cx="70" cy="70" r="70"/>
-                                    </svg>
-                                    <div class="number">
-                                        <h2>50<span>%</span></h2>
-                                    </div>
-                                    <h3 class="text">MySQL</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+    <div class="skills">
+        <h3>Soft Skills</h3>
+        <div class="numeracion1">1</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="60%" height="25" />
+            <text x="3" y="20" class="nombre">Gestion del tiempo</text>
+            <text x="54%" y="20" class="porcentaje">90%</text>
+        </svg>
+        <div class="numeracion2">2</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="50%" height="25" />
+            <text x="3" y="20" class="nombre">Trabajo en equipo</text>
+            <text x="44%" y="20" class="porcentaje">80%</text>
+        </svg>
+        <div class="numeracion3">3</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="50%" height="25" />
+            <text x="3" y="20" class="nombre">Adaptabilidad</text>
+            <text x="44%" y="20" class="porcentaje">80%</text>
+        </svg>
+        <div class="numeracion4">4</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="40%" height="25" />
+            <text x="3" y="20" class="nombre">Resolución de problemas</text>
+            <text x="34%" y="20" class="porcentaje">70%</text>
+        </svg>
+        <h3>Hard Skills</h3>
+        <div class="numeracion5">1</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="65%" height="25" />
+            <text x="3" y="20" class="nombre">Desarrollo web Full Stack</text>
+            <text x="59%" y="20" class="porcentaje">95%</text>
+        </svg>
+
+        <div class="numeracion6">2</div>
+        <svg class="caja">
+            <rect x="0" y="0" width="50%" height="25" />
+            <text x="3" y="20" class="nombre">Manejo de recursos tecnológicos</text>
+            <text x="44%" y="20" class="porcentaje">80%</text>
+        </svg>
     </div>
 </section>
