--- a/src/app/components/proyectos/items/items.component.css
+++ b/src/app/components/proyectos/items/items.component.css
@@ -18,7 +18,8 @@
     height: 100%;
     background-color: #1C1D25;
     position: relative;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 45%);
+    box-shadow: 0 0 30px 12px #0379d6;
+
     margin-left: auto;
     margin-right: auto;
     background-position: 50%;
@@ -43,9 +44,34 @@
 }
 .cajaTexto h2{
     padding: 20px 20px 0px;
+    color: #E8563A;
 }
-.cajaTexto p, .cajaTexto h6{
+.cajaTexto p {
     padding: 0 40px;
     font-size: 20px;
     color: white;
+}
+.cajaTexto h6 {
+    font-size: 16px;
+    padding: 0 40px;
+    color: white;
+}
+a:hover{
+    text-decoration: none;
+}
+.barra {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+}
+.botonEdit {
+    background-color: transparent;
+    border-color: white;
+    border-radius: 15px;
+}
+.botonEdit i {
+    color: white;
+    margin: 5px 3px;
 }
