--- a/src/app/components/proyectos/simon/simon.component.css
+++ b/src/app/components/proyectos/simon/simon.component.css
@@ -5,13 +5,13 @@
 .boton{
     background-color: transparent;
     position: fixed;
-    left: 5%;
-    border-radius: 40%;
-    border-color:white;
+    border: none;
+    left: 89%;
+    z-index: 1;
 }
 .back{
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 .panel{
     display: block;
@@ -50,4 +50,7 @@
     padding: 0 40px;
     font-size: 20px;
     color: white;
+}
+a:hover{
+    text-decoration: none;
 }
