--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -3,12 +3,12 @@
         <div id="contenedorCentral">
             <div>
                 <div class="titular">
-                    <h1 class="diego">Diego Romero</h1>
+                    <h1 class="diego">{{nombre}}</h1>
                 </div>
             </div>
             <div>
                 <div>
-                    <h3 class="descripcion">Full Stack Developer Jr</h3>
+                    <h3 class="descripcion">{{rol}}</h3>
                 </div>
             </div>    
             <div>
