--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -10,20 +10,14 @@
     <div class="contenedor-sobreMi">
         <div class="parrafoAbout">
             <p>
-                !Hola! Mi nombre es Diego, vivo en Corrientes - Argentina y soy Full Stack Developer Jr. Una de las cosas que me gusta mucho es poder dar "vida" a una página web.
-                El desarrollo web me comenzó a llamar la atención en 2020 cuando un amigo me contó sobre eso. Decidí empezar a realizar 
-                cursos de Introducción a Front End, aprendiendo HTML-CSS y un poco de Javascript. A medida que iba creando cosas y practicando, 
-                mi interés hacia el desarrolo web fue creciendo más, realicé otro curso ya de Full Stack en donde pude aprender muchas cosas más 
-                sobre como crear mi propio sitio web.
-                Mi enfoque principal es recibirme de la universidad como Ingeniero en Sistemas de Información, pero aún así me gusta mucho trabajar
-                como Full Stack Developer Jr.
+                {{sobreMi}}
             </p>
             <p>
-                Te mando un saludo y gracias por pasarte por mi Portfolio Web!
+                {{saludo}}
             </p>
         </div>
         <div class="perfil">
-            <img id="img-perfil" src="assets/imagenes/perfil2.jpeg" alt="">
+            <img id="img-perfil" src="{{imagenPerfil}}">
         </div>
     </div>
 </div>
