--- a/src/app/components/estudios/estudios.component.css
+++ b/src/app/components/estudios/estudios.component.css
@@ -67,3 +67,19 @@
     color: white;
     margin: 5px 3px;
 }
+
+@media only screen and (max-width: 768px){
+    .caja-estudios {
+        display: block;
+        padding-right: 0px;
+    }
+
+    .listado-estudios{
+        display: flex;
+        overflow-x: auto;
+        width: calc(100% + 75px);
+        padding-left: 50px;
+        margin-left: -50px;
+        margin-bottom: 30px;
+    }
+}
