--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -55,10 +55,6 @@
     font-size: 20px;
     padding: 10px 0;
 }
-.idioma{
-    color: #b0b2c3;
-    font-family: League Spartan, Helvetica, Arial, sans-serif;
-}
 .active{
     color: #0379D6;
 }
@@ -75,3 +71,173 @@
     position: relative;
     transition: 0.4s;
 }
+/* MENU DESPLEGABLE */
+.menuDesplegable{
+    display: none;
+}
+#botonMenu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+    margin-right: -15px;
+    padding: 15px;
+    border: 0px;
+    background-color: transparent;
+    color: inherit;
+    text-transform: none;
+}
+.ham-box{
+    display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 24px;       
+}
+#ham-box-inner{
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    width: 30px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: white;
+    transform: rotate(0deg);
+}
+.ham-box-inner-close::before, .ham-box-inner-close::after{
+    content: "";
+    display: block;
+    position: absolute;
+    left: auto;
+    right: 0px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: white;
+}
+.ham-box-inner-close::before{
+    width: 120%;
+    top: -10px;
+    opacity: 1;
+    transition: all 0.25s;
+}
+.ham-box-inner-close::after{
+    width: 80%;
+    bottom: -10px;
+    transform: rotate(0deg);
+    transition: all 0.25s;
+}
+.ham-box-inner-open::before{
+    width: 100%;
+    top: 0px;
+    opacity: 0;
+    transition: all 0.25s;
+}
+.ham-box-inner-open::after{
+    width: 100%;
+    bottom: 0px;
+    transform: rotate(-90deg);
+    transition: all 0.25s;
+}
+#contenidoMenu{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    visibility: hidden;
+    transition: all .4s linear .2s;
+    z-index: -1;
+}
+#contenidoMenu::after{
+    background-color: #1c1d25;
+    background: linear-gradient(270deg,#235aa6,#101b3b);
+    z-index: 25;
+}
+#contenidoMenu::after {
+    will-change: transform;
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transition: transform .45s cubic-bezier(.694,.048,.335,1),
+    -webkit-transform .45s cubic-bezier(.694,.048,.335,1);
+    z-index: 25;
+}
+.linksNav{
+    position: absolute;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    z-index: 26;
+}
+.socialNavbar{
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+    margin: 0px;
+    padding: 0px;
+    padding-left: 25px;
+    list-style: none;
+    z-index: 26;
+}
+.socialNavbar li{
+    display: inline-block;
+    margin-right: 5px;
+}
+.socialNavbar img{
+    width: 20px;
+    height: 20px;
+}
+#contenidoMenu ul a{
+    display: inline-block;
+    text-decoration: none;
+    color:white;
+    font-family: League Spartan, Helvetica, Arial, sans-serif;
+    font-weight: 600;
+    font-size: 37px;
+    padding: 10px 15px;
+}
+/* FIN MENU DESPLEGABLE */
+
+@media only screen and (max-width: 1024px){
+    .barraNavegacion a{
+        font-size: 18px;
+    }
+  }
+  @media only screen and (max-width: 992px){
+    .listaLinks li{
+        margin: 0px 10px;
+    }
+  }
+  @media only screen and (max-width: 900px){
+    /* MENU DESPLEGABLE */
+    .contenedor-nav{
+        display: none;
+    }
+    .menuDesplegable{
+        display: block;
+        /* nuevo */
+        transition-delay: .1s;
+        z-index: 45;
+    }
+    /* FIN MENU DESPLEGABLE */
+  }
+  @media only screen and (max-width: 768px){
+    .barraNavegacion{
+        margin-right: 0px;
+    }
+  }
+  @media only screen and (max-width: 576px){
+    .linksNav li{
+        margin: 15px 0px;
+    }
+    .linksNav a{
+        font-size: 27px !important;
+    }
+  }
