--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -54,3 +54,30 @@
     background: linear-gradient(270deg, #0379D6, #101b3b);
     color: white;
 }
+
+@media only screen and (max-width: 900px){
+    .diego{
+        font-size: 72px;
+    }
+}
+@media only screen and (max-width: 700px){
+    .diego{
+        font-size: 64px;
+    }
+}
+@media only screen and (max-width: 576px){
+    #logoCentral{
+        width: 100%;
+    }
+    .diego{
+        font-size: 28px;
+    }
+    .descripcion{
+        font-size: 16px;
+    }
+}
+@media only screen and (max-width: 360px){
+    .contenedorCentral{
+        width: 95%;
+    }
+}
