--- a/src/app/components/proyectos/items/items.component.css
+++ b/src/app/components/proyectos/items/items.component.css
@@ -18,13 +18,10 @@
     height: 100%;
     background-color: #1C1D25;
     position: relative;
-    box-shadow: 0 0 30px 12px #0379d6;
-
+    border-bottom: 1px solid white;
+    padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    background-position: 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .panel img{
     width: 100%;
@@ -74,4 +71,16 @@ a:hover{
 .botonEdit i {
     color: white;
     margin: 5px 3px;
+}
+
+@media only screen and (max-width: 900px){
+    .cajaTexto h2{
+        font-size: 24px;
+    }
+    .cajaTexto p{
+        font-size: 16px;
+    }
+    .cajaTexto h6{
+        font-size: 12px;
+    }
 }
