--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,27 +22,13 @@
             <li><a class="enlaces" routerLink="/login" [routerLinkActive]="'active'">Iniciar Sesión</a></li>
         </ol>  
     </div>
-
     <div class="menuDesplegable">
-            <button id="botonMenu" onclick="desplegarMenu()">
+        <a routerLink="menu">
+            <button id="botonMenu">
                 <div class="ham-box">
                     <div id="ham-box-inner" class="ham-box-inner-close"></div>
                 </div>
             </button>
-            <nav id="contenidoMenu">
-                <ul class="linksNav">
-                    <li><a>Sobre Mí</a></li>
-                    <li><a>Estudios</a></li>
-                    <li><a>Contacto</a></li>
-                    <li><a>Iniciar Sesión</a></li>
-                </ul>
-                <ul class="socialNavbar">
-                    <li><a href="https://www.instagram.com/diegoromer9/" target="_blank"><img src="assets/iconos\instaNavbar.png" alt=""></a></li>
-                    <li><a href="https://twitter.com/romerodiego356" target="_blank"><img src="assets/iconos\tw.png" alt=""></a></li>
-                    <li><a href="https://github.com/DDiegoR" target="_blank"><img src="assets/iconos\gh.png" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/diego-eduardo-romero-700253221" target="_blank"><img src="assets/iconos\in.png" alt=""></a></li>
-                </ul>
-            </nav>
+        </a>
     </div>
-
 </nav>
