--- a/src/app/components/login/principal-login/principal-login.component.html
+++ b/src/app/components/login/principal-login/principal-login.component.html
@@ -1,5 +1,5 @@
 <div class="modalCaja">
-    <div class="login col-8">
+    <div class="login formulario">
         <div class="header">
             <h2>Iniciar Sesión</h2>
             <button type="button" 
