--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,23 +1,1 @@
-<div id="sobreMi" class="seccion-sobreMi">
-    <div class="barra">
-        <h2 class="titulos-secciones especial">Sobre Mí</h2>
-        <div>
-            <button type="button" class="botonEdit">
-                <i class="fas fa-pen"></i>
-            </button>
-        </div>
-    </div>
-    <div class="contenedor-sobreMi">
-        <div class="parrafoAbout">
-            <p>
-                {{sobreMi}}
-            </p>
-            <p>
-                {{saludo}}
-            </p>
-        </div>
-        <div class="perfil">
-            <img id="img-perfil" src="{{imagenPerfil}}">
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
