--- a/src/app/components/estudios/skills/skills.component.html
+++ b/src/app/components/estudios/skills/skills.component.html
@@ -19,7 +19,7 @@
         <h1 class="titulo">Tecnologías</h1>
         <ul class="lista-tecnologias">
             <li *ngFor = "let tecnologia of tecnologias">
-                <h5>{{tecnologia.titulo}}</h5>
+                <h5 class="titulo-tecnologia">{{tecnologia.titulo}}</h5>
                 <img src="{{tecnologia.imagen}}">
             </li>
         </ul>
