--- a/src/app/components/proyectos/items/items.component.html
+++ b/src/app/components/proyectos/items/items.component.html
@@ -16,6 +16,7 @@
                     <div class="cajaTexto">
                         <h2>{{proyecto.titulo}}</h2>
                         <p>{{proyecto.descripcion}}</p>
+                        <a href="{{proyecto.link}}" target="_blank">{{proyecto.link}}</a>
                         <h6>{{proyecto.fecha_inicio | date:'yyyy'}} - {{proyecto.fecha_fin | date:'yyyy'}}</h6>
                     </div>
                 </div>    
