--- a/src/app/components/estudios/skills/skills.component.css
+++ b/src/app/components/estudios/skills/skills.component.css
@@ -12,14 +12,14 @@
     padding-left: 20px;
     width: 100%;
     height: 40px;
-    fill: #0379D6;
+    fill: #2ECC71;
 }
 .nombre {
-    fill: white;
+    fill: #18649A ;
     font-size: 17px;
 }
 .porcentaje {
-    fill: white;
+    fill: #18649A ;
     font-size: 25px;
 }
 
@@ -36,7 +36,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
     list-style: none;
 }
 .lista-tecnologias li {
@@ -49,6 +49,9 @@
 }
 ul.lista-tecnologias img {
     width: 100%;
+}
+.titulo-tecnologia {
+    color: #2ECC7A;
 }
 
 @media only screen and (max-width: 900px) { 
