--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,26 +1,1 @@
-<div class="contenedorCentro">
-    <div class="contenedorCentral">
-        <div id="contenedorCentral">
-            <div>
-                <div class="titular">
-                    <h1 class="diego">{{nombre}}</h1>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <h3 class="descripcion">{{rol}}</h3>
-                </div>
-            </div>    
-            <div>
-                <div>
-                    <a class="btn btn-primary" routerLink="/contacto">Escribeme</a>
-                </div>
-            </div>
-        </div>   
-    </div>
-    <div class="logoCentral">
-        <div>
-            <img src="assets/imagenes/LogoDR-blueGrande.png" id="logoCentral" alt="LogoDR">
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
